# iprotopy

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  client.py  constants.py  echo.proto  echo.py  example.proto  example.py  example_pb2.py  example_pb2.pyi  example_pb2_grpc.py  gen.sh  gen_betterproto.sh  gen_mypy.sh  pyproject.toml  some.py  use.py
.github/workflows/: publish.yml
iprotopy/: file_generator.py  package_generator.py  package_generator_settings.py  service_generator.py  service_method_generator.py  string_case_converter.py
models/: instruments.py  marketdata.py  operations.py  orders.py  sandbox.py  stoporders.py  users.py
models/google/: api.py
proto-schema-parser/: astor_parse.py  main.py  result.py
protopy/: __init__.py  __main__.py  annotation_generator.py  base_service_source_generator.py  class_field_generator.py  domestic_importer.py  file_generator.py  import_types.py  importer.py  message_class_generator.py  one_of_generator.py  package_generator.py  protos_generator.py  service_generator.py  service_method_generator.py  type_mapper.py
src/: __init__.py  __main__.py  annotation_generator.py  astor_parse.py  base_service_source_generator.py  class_field_generator.py  convertion.py  convertion_fix.py  domestic_importer.py  enum_generator.py  file_generator.py  generator.py  import_types.py  importer.py  imports.py  message_class_generator.py  one_of_generator.py  package_generator.py  protos_generator.py  service_generator.py  service_method_generator.py  type_mapper.py
tests/: test_market_data.py
usage/: clients.py
(+58 files in other folders)
