[tool.poetry]
name = "autoproto"
version = "0.1.0"
description = ""
authors = ["Ruslan Sirazhetdinov <ruslansir@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3"
grpcio-tools = "^1.64.1"
grpcio = "^1.64.1"
pydantic = "^2.8.0"
betterproto = {extras = ["compiler"], version = "^1.2.5"}
pure-protobuf = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
