[tool.poetry]
name = "autoproto"
version = "0.1.0"
description = ""
authors = ["Ruslan Sirazhetdinov <ruslansir@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
grpcio-tools = "^1.64.1"
grpcio = "^1.64.1"
pydantic = "^2.8.0"
betterproto = {extras = ["compiler"], version = "^1.2.5"}
pure-protobuf = "^3.1.0"
mypy-protobuf = "^3.6.0"
proto-schema-parser = "^1.3.5"
astor = "^0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
